--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
             <p class="recharge-portal-text">Recharge Portal</p>
             
             <p class="cash-info">
-                Cash: **01070864221** | 1P = 2 EGP
-            </p>
+
+    <p class="cash-info">
+    01104973142 ارسل 50 جنيه مصري للأستلام
+</p>
+
 
             <form action="#" method="POST">
                 <input type="number" id="egp_amount" name="egp_amount" placeholder="EGP amount" required>
